--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,9 @@ body::after {
 }
 
 @media (max-width: 600px) {
+  html {
+    font-size: 16px;
+  }
   body {
     background-position: 30% top;
   }
